--- a/source/markup/auth.html
+++ b/source/markup/auth.html
@@ -30,9 +30,9 @@
 					</button>
 				</div>
 
-				<a class="link header__logo" href="#">
-					<img src="assets/images/logo.svg" alt="логотип криптобиржи Bithoven">
-				</a>
+					<a class="link logotype" width="126" height="53" href="#главная">
+						<img class="logotype__image" src="assets/images/logo.svg" alt="Логотип криптоплатформы Bithoven">
+					</a>
 
 				<div class="header__user-nav header__user-nav_media_deck ">
 
@@ -50,9 +50,107 @@
 					</button>
 
 
-					<button class="button_form_none header__button-leng" type="button">
-						RU
-					</button>
+						<button class="button_form_none header__button-leng header__button-lang--hover" type="button">
+							RU
+
+							<nav class="header-nav__menu">
+								<ul class="menu header-nav header-nav_size_smal header-nav_size--lang">
+									<li class="header-nav__item-button">
+										<a class="button header-lang__link-button" href="">
+											English
+										</a>
+									</li>
+
+									<li class="header-nav__item-button">
+										<a class="button header-lang__link-button" href="">
+											Polski
+										</a>
+									</li>
+
+									<li class="header-nav__item-button">
+										<a class="button  header-lang__link-button" href="">
+											繁體中文
+										</a>
+									</li>
+
+									<li class="header-nav__item-button">
+										<a class="button  header-lang__link-button" href="">
+											العربية
+										</a>
+									</li>
+
+									<li class="header-nav__item-button">
+										<a class="button  header-lang__link-button" href="">
+											Русский
+										</a>
+									</li>
+
+									<li class="header-nav__item-button">
+										<a class="button  header-lang__link-button" href="">
+											Türkçe
+										</a>
+									</li>
+
+									<li class="header-nav__item-button">
+										<a class="button  header-lang__link-button" href="">
+											Português
+										</a>
+									</li>
+
+									<li class="header-nav__item-button">
+										<a class="button header-lang__link-button" href="">
+											Svenska
+										</a>
+									</li>
+
+									<li class="header-nav__item-button">
+										<a class="button header-lang__link-button" href="">
+											Bahasa Indonesia
+										</a>
+									</li>
+
+									<li class="header-nav__item-button">
+										<a class="button header-lang__link-button" href="">
+											日本語
+										</a>
+									</li>
+
+									<li class="header-nav__item-button">
+										<a class="button header-lang__link-button" href="">
+											Filipino
+										</a>
+									</li>
+
+									<li class="header-nav__item-button ">
+										<a class="button header-lang__link-button" href="">
+											Українська мова
+										</a>
+									</li>
+
+									<li class="header-nav__item-button ">
+										<a class="button header-lang__link-button" href="">
+											Čeština
+										</a>
+									</li>
+									<li class="header-nav__item-button ">
+										<a class="button header-lang__link-button" href="">
+											Български
+										</a>
+									</li>
+									<li class="header-nav__item-button ">
+										<a class="button header-lang__link-button" href="">
+											اردو
+										</a>
+									</li>
+									<li class="header-nav__item-button ">
+										<a class="button header-lang__link-button" href="">
+											latviešu valoda
+										</a>
+									</li>
+
+								</ul>
+							</nav>
+						</button>
 
 
 					<button class="button_form_none header__button-sedes" type="button">
