--- a/source/markup/education.html
+++ b/source/markup/education.html
@@ -11,166 +11,264 @@
 </head>
 
 <body class="page__body">
-		<header class="header header_display_non">
-			<div class="header__menu-wrap">
-				<div class="header__menu-top">
-					<div class="header__user-wrap">
-						<button class="button_form_none  header__button-deck " type="button">
-							<svg class="header__svg" width="22" height="22" aria-hidden="true" focusable="false">
-								<use href="assets/images/svg/sprite.svg#deck"></use>
-							</svg>
-						</button>
-
-						<button class="button_form_none header__button-learn" type="button">
-							Узнать
-						</button>
-
-						<button class="button_form_none header__button-nav " type="button">
-							Темы
-						</button>
-					</div>
-
-					<a class="link header__logo" href="#">
-						<img src="assets/images/logo.svg" alt="логотип криптобиржи Bithoven">
-					</a>
-
-					<div class="header__user-nav header__user-nav_media_deck ">
-
-						<button class="button_form_none header__button-onof " type="button">
-							<svg class="header__svg" width="18" height="18" aria-hidden="true" focusable="false">
-								<use href="assets/images/svg/sprite.svg#onof"></use>
-							</svg>
-						</button>
-
-
-						<button class="button_form_none header__button-acc" type="button">
-							<svg class="header__svg" width="25" height="25" aria-hidden="true" focusable="false">
-								<use href="assets/images/svg/sprite.svg#acc"></use>
-							</svg>
-						</button>
-
-
-						<button class="button_form_none header__button-leng" type="button">
-							RU
-						</button>
-
-
-						<button class="button_form_none header__button-sedes" type="button">
-							<svg class="header__svg" width="13" height="14" aria-hidden="true" focusable="false">
-								<use href="assets/images/svg/sprite.svg#sedes"></use>
-							</svg>
-						</button>
-					</div>
-
-					<button class="button button_color_yellow header__aut">
-						Авторизация
+	<header class="header header_display_non">
+		<div class="header__menu-wrap">
+			<div class="header__menu-top">
+				<div class="header__user-wrap">
+					<button class="button_form_none  header__button-deck " type="button">
+						<svg class="header__svg" width="22" height="22" aria-hidden="true" focusable="false">
+							<use href="assets/images/svg/sprite.svg#deck"></use>
+						</svg>
 					</button>
 
+					<button class="button_form_none header__button-learn" type="button">
+						Узнать
+					</button>
+
+					<button class="button_form_none header__button-nav " type="button">
+						Темы
+					</button>
 				</div>
 
-				<div class="header__themes--noactive  header__themes_media_desk">
-					<a class="button header__button-link" href="#">
-						Altcoin
-					</a>
+			<a class="link logotype header__logotype" width="126" height="53" href="#главная">
+				<img class="logotype__image" src="assets/images/logo.svg" alt="Логотип криптоплатформы Bithoven">
+			</a>
 
-					<a class="button header__button-link" href="#">
-						Binance
-					</a>
+				<div class="header__user-nav header__user-nav_media_deck ">
 
-					<a class="button header__button-link" href="#">
-						Биткоин
-					</a>
+					<button class="button_form_none header__button-onof " type="button">
+						<svg class="header__svg" width="18" height="18" aria-hidden="true" focusable="false">
+							<use href="assets/images/svg/sprite.svg#onof"></use>
+						</svg>
+					</button>
 
-					<a class="button header__button-link" href="#">
-						Блокчейн
-					</a>
 
-					<a class="button header__button-link" href="#">
-						Консенсус
-					</a>
+					<button class="button_form_none header__button-acc" type="button">
+						<svg class="header__svg" width="25" height="25" aria-hidden="true" focusable="false">
+							<use href="assets/images/svg/sprite.svg#acc"></use>
+						</svg>
+					</button>
 
-					<a class="button header__button-link" href="#">
-						DeFi
-					</a>
 
-					<a class="button header__button-link header__button-link--big" href="#">
-						Технический анализ
-					</a>
+					<button class="button_form_none header__button-leng header__button-lang--hover" type="button">
+						RU
 
-					<a class="button header__button-link header__button-link--big" href="#">
-						Еще+12
-					</a>
+						<nav class="header-nav__menu">
+							<ul class="menu header-nav header-nav_size_smal header-nav_size--lang">
+								<li class="header-nav__item-button">
+									<a class="button header-lang__link-button" href="">
+										English
+									</a>
+								</li>
+
+								<li class="header-nav__item-button">
+									<a class="button header-lang__link-button" href="">
+										Polski
+									</a>
+								</li>
+
+								<li class="header-nav__item-button">
+									<a class="button  header-lang__link-button" href="">
+										繁體中文
+									</a>
+								</li>
+
+								<li class="header-nav__item-button">
+									<a class="button  header-lang__link-button" href="">
+										العربية
+									</a>
+								</li>
+
+								<li class="header-nav__item-button">
+									<a class="button  header-lang__link-button" href="">
+										Русский
+									</a>
+								</li>
+
+								<li class="header-nav__item-button">
+									<a class="button  header-lang__link-button" href="">
+										Türkçe
+									</a>
+								</li>
+
+								<li class="header-nav__item-button">
+									<a class="button  header-lang__link-button" href="">
+										Português
+									</a>
+								</li>
+
+								<li class="header-nav__item-button">
+									<a class="button header-lang__link-button" href="">
+										Svenska
+									</a>
+								</li>
+
+								<li class="header-nav__item-button">
+									<a class="button header-lang__link-button" href="">
+										Bahasa Indonesia
+									</a>
+								</li>
+
+								<li class="header-nav__item-button">
+									<a class="button header-lang__link-button" href="">
+										日本語
+									</a>
+								</li>
+
+								<li class="header-nav__item-button">
+									<a class="button header-lang__link-button" href="">
+										Filipino
+									</a>
+								</li>
+
+								<li class="header-nav__item-button ">
+									<a class="button header-lang__link-button" href="">
+										Українська мова
+									</a>
+								</li>
+
+								<li class="header-nav__item-button ">
+									<a class="button header-lang__link-button" href="">
+										Čeština
+									</a>
+								</li>
+								<li class="header-nav__item-button ">
+									<a class="button header-lang__link-button" href="">
+										Български
+									</a>
+								</li>
+								<li class="header-nav__item-button ">
+									<a class="button header-lang__link-button" href="">
+										اردو
+									</a>
+								</li>
+								<li class="header-nav__item-button ">
+									<a class="button header-lang__link-button" href="">
+										latviešu valoda
+									</a>
+								</li>
+
+							</ul>
+						</nav>
+					</button>
+
+
+					<button class="button_form_none header__button-sedes" type="button">
+						<svg class="header__svg" width="13" height="14" aria-hidden="true" focusable="false">
+							<use href="assets/images/svg/sprite.svg#sedes"></use>
+						</svg>
+					</button>
 				</div>
 
-				<ul class="menu header__bottom">
-					<li class="header__item">
-						<a class="link header__link" href="#">
-							Глоссарий
-						</a>
-					</li>
+				<button class="button button_color_yellow header__aut">
+					Авторизация
+				</button>
 
-					<li class="header__item">
-						<a class="link header__link" href="#">
-							Викторина
-						</a>
-					</li>
-
-					<li class="header__item">
-						<a class="link header__link" href="#">
-							Купить криптовалюту
-						</a>
-					</li>
-
-					<li class="header__item">
-						<a class="link header__link" href="#">
-							Запуск токена
-						</a>
-					</li>
-
-					<li class="header__item">
-						<a class="link header__link" href="#">
-							Платформа
-						</a>
-					</li>
-
-					<li class="header__item">
-						<a class="link header__link" href="#">
-							Статьи
-						</a>
-					</li>
-				</ul>
 			</div>
 
-			<nav class="header__nav header__nav_display_non">
-				<button class="button_form_none header__button-bottom header__button_type_home" type="button">
-					<svg class="header__svg" width="16" height="17" aria-hidden="true" focusable="false">
-						<use href="assets/images/svg/sprite.svg#home"></use>
-					</svg>
-					Главная
-				</button>
+			<div class="header__themes--noactive  header__themes_media_desk">
+				<a class="button header__button-link" href="#">
+					Altcoin
+				</a>
 
-				<button class="button_form_none header__button-bottom header__button_type_search" type="button">
-					<svg class="header__svg" width="18" height="18" aria-hidden="true" focusable="false">
-						<use href="assets/images/svg/sprite.svg#search"></use>
-					</svg>
-					Поиск
-				</button>
+				<a class="button header__button-link" href="#">
+					Binance
+				</a>
 
-				<button class="button_form_none header__button-bottom header__button_type_profile" type="button">
-					<svg class="header__svg" width="19" height="18" aria-hidden="true" focusable="false">
-						<use href="assets/images/svg/sprite.svg#profile"></use>
-					</svg>
-					Профиль
-				</button>
+				<a class="button header__button-link" href="#">
+					Биткоин
+				</a>
 
-				<button class="button_form_none header__button-bottom header__button_type_menu" type="button">
-					<svg class="header__svg" width="22" height="18" aria-hidden="true" focusable="false">
-						<use href="assets/images/svg/sprite.svg#menu"></use>
-					</svg>
-					Меню
-				</button>
-			</nav>
-		</header>
+				<a class="button header__button-link" href="#">
+					Блокчейн
+				</a>
+
+				<a class="button header__button-link" href="#">
+					Консенсус
+				</a>
+
+				<a class="button header__button-link" href="#">
+					DeFi
+				</a>
+
+				<a class="button header__button-link header__button-link--big" href="#">
+					Технический анализ
+				</a>
+
+				<a class="button header__button-link header__button-link--big" href="#">
+					Еще+12
+				</a>
+			</div>
+
+			<ul class="menu header__bottom">
+				<li class="header__item">
+					<a class="link header__link" href="#">
+						Глоссарий
+					</a>
+				</li>
+
+				<li class="header__item">
+					<a class="link header__link" href="#">
+						Викторина
+					</a>
+				</li>
+
+				<li class="header__item">
+					<a class="link header__link" href="#">
+						Купить криптовалюту
+					</a>
+				</li>
+
+				<li class="header__item">
+					<a class="link header__link" href="#">
+						Запуск токена
+					</a>
+				</li>
+
+				<li class="header__item">
+					<a class="link header__link" href="#">
+						Платформа
+					</a>
+				</li>
+
+				<li class="header__item">
+					<a class="link header__link" href="#">
+						Статьи
+					</a>
+				</li>
+			</ul>
+		</div>
+
+		<nav class="header__nav header__nav_display_non">
+			<button class="button_form_none header__button-bottom header__button_type_home" type="button">
+				<svg class="header__svg" width="16" height="17" aria-hidden="true" focusable="false">
+					<use href="assets/images/svg/sprite.svg#home"></use>
+				</svg>
+				Главная
+			</button>
+
+			<button class="button_form_none header__button-bottom header__button_type_search" type="button">
+				<svg class="header__svg" width="18" height="18" aria-hidden="true" focusable="false">
+					<use href="assets/images/svg/sprite.svg#search"></use>
+				</svg>
+				Поиск
+			</button>
+
+			<button class="button_form_none header__button-bottom header__button_type_profile" type="button">
+				<svg class="header__svg" width="19" height="18" aria-hidden="true" focusable="false">
+					<use href="assets/images/svg/sprite.svg#profile"></use>
+				</svg>
+				Профиль
+			</button>
+
+			<button class="button_form_none header__button-bottom header__button_type_menu" type="button">
+				<svg class="header__svg" width="22" height="18" aria-hidden="true" focusable="false">
+					<use href="assets/images/svg/sprite.svg#menu"></use>
+				</svg>
+				Меню
+			</button>
+		</nav>
+	</header>
 
 	<section class="education container">
 
@@ -529,16 +627,112 @@
 	<footer class="footer container">
 		<div class="footer__top">
 
-			<a class="footer__img-wrap">
-				<svg class="social__icon" width="39" height="39" aria-hidden="true" focusable="false">
-					<use href="assets/images/svg/sprite.svg#logo">
-					</use>
-				</svg>
+			<a class="link logotype" width="126" height="53" href="#главная">
+				<img class="logotype__image" src="assets/images/logo.svg" alt="Логотип криптоплатформы Bithoven">
 			</a>
 
-			<p class="text footer__lang footer__lang_media_desktop">
-				RU
-			</p>
+				<button class="button_form_none header__button-lang--hover footer__lang_media"
+					type="button">
+					RU
+
+					<nav class="header-nav__menu">
+						<ul class="menu header-nav header-nav_size_smal header-nav_size--lang">
+							<li class="header-nav__item-button">
+								<a class="button header-lang__link-button" href="">
+									English
+								</a>
+							</li>
+
+							<li class="header-nav__item-button">
+								<a class="button header-lang__link-button" href="">
+									Polski
+								</a>
+							</li>
+
+							<li class="header-nav__item-button">
+								<a class="button  header-lang__link-button" href="">
+									繁體中文
+								</a>
+							</li>
+
+							<li class="header-nav__item-button">
+								<a class="button  header-lang__link-button" href="">
+									العربية
+								</a>
+							</li>
+
+							<li class="header-nav__item-button">
+								<a class="button  header-lang__link-button" href="">
+									Русский
+								</a>
+							</li>
+
+							<li class="header-nav__item-button">
+								<a class="button  header-lang__link-button" href="">
+									Türkçe
+								</a>
+							</li>
+
+							<li class="header-nav__item-button">
+								<a class="button  header-lang__link-button" href="">
+									Português
+								</a>
+							</li>
+
+							<li class="header-nav__item-button">
+								<a class="button header-lang__link-button" href="">
+									Svenska
+								</a>
+							</li>
+
+							<li class="header-nav__item-button">
+								<a class="button header-lang__link-button" href="">
+									Bahasa Indonesia
+								</a>
+							</li>
+
+							<li class="header-nav__item-button">
+								<a class="button header-lang__link-button" href="">
+									日本語
+								</a>
+							</li>
+
+							<li class="header-nav__item-button">
+								<a class="button header-lang__link-button" href="">
+									Filipino
+								</a>
+							</li>
+
+							<li class="header-nav__item-button ">
+								<a class="button header-lang__link-button" href="">
+									Українська мова
+								</a>
+							</li>
+
+							<li class="header-nav__item-button ">
+								<a class="button header-lang__link-button" href="">
+									Čeština
+								</a>
+							</li>
+							<li class="header-nav__item-button ">
+								<a class="button header-lang__link-button" href="">
+									Български
+								</a>
+							</li>
+							<li class="header-nav__item-button ">
+								<a class="button header-lang__link-button" href="">
+									اردو
+								</a>
+							</li>
+							<li class="header-nav__item-button ">
+								<a class="button header-lang__link-button" href="">
+									latviešu valoda
+								</a>
+							</li>
+
+						</ul>
+					</nav>
+				</button>
 
 			<p class="text footer__text_media_desktop">
 				Copyright © 2022 Bithoven.com.
@@ -560,7 +754,7 @@
 						<svg class="social__icon" width="39" height="39" aria-hidden="true" focusable="false">
 							<use href="assets/images/svg/sprite.svg#youtube"></use>
 						</svg>
-							<span class="acces">youtube</span>
+						<span class="acces">youtube</span>
 					</a>
 				</li>
 
@@ -588,9 +782,15 @@
 					</a>
 				</li>
 			</ul>
+
 			<div class="footer__load_media_desktop">
-				<img class="footer__img" src="assets/images/footer/appstore.png" alt="appstore">
-				<img class="footer__img" src="assets/images/footer/googleplay.png" alt="googleplay">
+				<a class="footer__app-link" href="#">
+					<img class="footer__img" src="assets/images/footer/apple.svg" alt="загрузка в appstore">
+				</a>
+
+				<a class="footer__app-link" href="#">
+					<img class="footer__img" src="assets/images/footer/google.svg" alt="загрузка в googleplay">
+				</a>
 			</div>
 		</div>
 		<div class="footer__list">
@@ -705,13 +905,25 @@
 		</div>
 
 		<div class="footer__load">
-			<img class="footer__img" src="assets/images/footer/appstore.png" alt="appstore">
-			<img class="footer__img" src="assets/images/footer/googleplay.png" alt="googleplay">
+			<a class="link footer__img-link" href="#">
+				<span class="visually-hidden">appstore</span>
+				<svg class="social__icon-play" width="113" height="30" aria-hidden="true" focusable="false">
+					<use href="assets/images/svg/sprite.svg#apple"></use>
+				</svg>
+			</a>
+
+			<a class="link footer__img-link" href="#">
+				<span class="visually-hidden">googleplay</span>
+				<svg class="social__icon-play" width="119" height="30" aria-hidden="true" focusable="false">
+					<use href="assets/images/svg/sprite.svg#google"></use>
+				</svg>
+			</a>
 		</div>
 
 		<ul class="menu footer__social">
 			<li class="footer__icon footer__icon_net_telegramm">
 				<a class="footer__social-link" href="">
+					<span class="visually-hidden">telegramm</span>
 					<svg class="social__icon" width="39" height="39" aria-hidden="true" focusable="false">
 						<use href="assets/images/svg/sprite.svg#telegramm"></use>
 					</svg>
@@ -720,6 +932,7 @@
 
 			<li class="footer__icon footer__icon_net_youtube">
 				<a class="footer__social-link" href="">
+					<span class="visually-hidden">youtube</span>
 					<svg class="social__icon" width="39" height="39" aria-hidden="true" focusable="false">
 						<use href="assets/images/svg/sprite.svg#youtube"></use>
 					</svg>
@@ -728,6 +941,7 @@
 
 			<li class="footer__icon footer__icon_net_inst">
 				<a class="footer__social-link" href="">
+					<span class="visually-hidden">instagram</span>
 					<svg class="social__icon" width="39" height="39" aria-hidden="true" focusable="false">
 						<use href="assets/images/svg/sprite.svg#inst"></use>
 					</svg>
@@ -736,6 +950,7 @@
 
 			<li class="footer__icon footer__icon_net_facebook">
 				<a class="footer__social-link" href="">
+					<span class="visually-hidden">facebook</span>
 					<svg class="social__icon" width="39" height="39" aria-hidden="true" focusable="false">
 						<use href="assets/images/svg/sprite.svg#facebook"></use>
 					</svg>
@@ -744,6 +959,7 @@
 
 			<li class="footer__icon footer__icon_net_discord">
 				<a class="footer__social-link" href="">
+					<span class="visually-hidden">discord</span>
 					<svg class="social__icon" width="39" height="39" aria-hidden="true" focusable="false">
 						<use href="assets/images/svg/sprite.svg#discord"></use>
 					</svg>
