--- a/source/markup/education-2.html
+++ b/source/markup/education-2.html
@@ -14,8 +14,9 @@
 
 	<header class="header-mobile container">
 		<div class="content__wrap header-mobile__content">
-			<a class="link header__logo header-mobile__logo" href="#">
-				<img src="assets/images/logo.svg" alt="логотип криптобиржи Bithoven">
+
+			<a class="link logotype" width="126" height="53" href="#главная">
+				<img class="logotype__image" src="assets/images/logo.svg" alt="Логотип криптоплатформы Bithoven">
 			</a>
 
 			<button class="button_form_none  header__button-deck header-mobile__menu" type="button">
@@ -24,10 +25,107 @@
 				</svg>
 			</button>
 
-			<button class="button_form_none header__button-leng header-mobile__leng" type="button">
+			<button class="button_form_none header__button-leng header__button-lang--hover"
+				type="button">
 				RU
 
-				
+				<nav class="header-nav__menu">
+					<ul class="menu header-nav header-nav_size_smal header-nav_size--lang">
+						<li class="header-nav__item-button">
+							<a class="button header-lang__link-button" href="">
+								English
+							</a>
+						</li>
+
+						<li class="header-nav__item-button">
+							<a class="button header-lang__link-button" href="">
+								Polski
+							</a>
+						</li>
+
+						<li class="header-nav__item-button">
+							<a class="button  header-lang__link-button" href="">
+								繁體中文
+							</a>
+						</li>
+
+						<li class="header-nav__item-button">
+							<a class="button  header-lang__link-button" href="">
+								العربية
+							</a>
+						</li>
+
+						<li class="header-nav__item-button">
+							<a class="button  header-lang__link-button" href="">
+								Русский
+							</a>
+						</li>
+
+						<li class="header-nav__item-button">
+							<a class="button  header-lang__link-button" href="">
+								Türkçe
+							</a>
+						</li>
+
+						<li class="header-nav__item-button">
+							<a class="button  header-lang__link-button" href="">
+								Português
+							</a>
+						</li>
+
+						<li class="header-nav__item-button">
+							<a class="button header-lang__link-button" href="">
+								Svenska
+							</a>
+						</li>
+
+						<li class="header-nav__item-button">
+							<a class="button header-lang__link-button" href="">
+								Bahasa Indonesia
+							</a>
+						</li>
+
+						<li class="header-nav__item-button">
+							<a class="button header-lang__link-button" href="">
+								日本語
+							</a>
+						</li>
+
+						<li class="header-nav__item-button">
+							<a class="button header-lang__link-button" href="">
+								Filipino
+							</a>
+						</li>
+
+						<li class="header-nav__item-button ">
+							<a class="button header-lang__link-button" href="">
+								Українська мова
+							</a>
+						</li>
+
+						<li class="header-nav__item-button ">
+							<a class="button header-lang__link-button" href="">
+								Čeština
+							</a>
+						</li>
+						<li class="header-nav__item-button ">
+							<a class="button header-lang__link-button" href="">
+								Български
+							</a>
+						</li>
+						<li class="header-nav__item-button ">
+							<a class="button header-lang__link-button" href="">
+								اردو
+							</a>
+						</li>
+						<li class="header-nav__item-button ">
+							<a class="button header-lang__link-button" href="">
+								latviešu valoda
+							</a>
+						</li>
+
+					</ul>
+				</nav>
 			</button>
 		</div>
 	</header>
@@ -51,9 +149,9 @@
 					</button>
 				</div>
 
-				<a class="link header__logo" href="#">
-					<img src="assets/images/logo.svg" alt="логотип криптобиржи Bithoven">
-				</a>
+			<a class="link logotype" width="126" height="53" href="#главная">
+				<img class="logotype__image" src="assets/images/logo.svg" alt="Логотип криптоплатформы Bithoven">
+			</a>
 
 				<div class="header__user-nav header__user-nav_media_deck ">
 
@@ -71,8 +169,106 @@
 					</button>
 
 
-					<button class="button_form_none header__button-leng" type="button">
+					<button class="button_form_none header__button-leng header__button-lang--hover" type="button">
 						RU
+
+						<nav class="header-nav__menu">
+							<ul class="menu header-nav header-nav_size_smal header-nav_size--lang">
+								<li class="header-nav__item-button">
+									<a class="button header-lang__link-button" href="">
+										English
+									</a>
+								</li>
+
+								<li class="header-nav__item-button">
+									<a class="button header-lang__link-button" href="">
+										Polski
+									</a>
+								</li>
+
+								<li class="header-nav__item-button">
+									<a class="button  header-lang__link-button" href="">
+										繁體中文
+									</a>
+								</li>
+
+								<li class="header-nav__item-button">
+									<a class="button  header-lang__link-button" href="">
+										العربية
+									</a>
+								</li>
+
+								<li class="header-nav__item-button">
+									<a class="button  header-lang__link-button" href="">
+										Русский
+									</a>
+								</li>
+
+								<li class="header-nav__item-button">
+									<a class="button  header-lang__link-button" href="">
+										Türkçe
+									</a>
+								</li>
+
+								<li class="header-nav__item-button">
+									<a class="button  header-lang__link-button" href="">
+										Português
+									</a>
+								</li>
+
+								<li class="header-nav__item-button">
+									<a class="button header-lang__link-button" href="">
+										Svenska
+									</a>
+								</li>
+
+								<li class="header-nav__item-button">
+									<a class="button header-lang__link-button" href="">
+										Bahasa Indonesia
+									</a>
+								</li>
+
+								<li class="header-nav__item-button">
+									<a class="button header-lang__link-button" href="">
+										日本語
+									</a>
+								</li>
+
+								<li class="header-nav__item-button">
+									<a class="button header-lang__link-button" href="">
+										Filipino
+									</a>
+								</li>
+
+								<li class="header-nav__item-button ">
+									<a class="button header-lang__link-button" href="">
+										Українська мова
+									</a>
+								</li>
+
+								<li class="header-nav__item-button ">
+									<a class="button header-lang__link-button" href="">
+										Čeština
+									</a>
+								</li>
+								<li class="header-nav__item-button ">
+									<a class="button header-lang__link-button" href="">
+										Български
+									</a>
+								</li>
+								<li class="header-nav__item-button ">
+									<a class="button header-lang__link-button" href="">
+										اردو
+									</a>
+								</li>
+								<li class="header-nav__item-button ">
+									<a class="button header-lang__link-button" href="">
+										latviešu valoda
+									</a>
+								</li>
+
+							</ul>
+						</nav>
 					</button>
 
 
@@ -790,13 +986,113 @@
 
 	<footer class="footer container">
 		<div class="footer__top">
-			<div class="footer__img-wrap">
-				<img class="logo footer__logo" src="assets/images/logo.svg" alt="логотип">
-			</div>
 
-			<p class="text footer__lang footer__lang_media_desktop">
-				RU
-			</p>
+		<a class="link logotype" width="126" height="53" href="#главная">
+			<img class="logotype__image" src="assets/images/logo.svg" alt="Логотип криптоплатформы Bithoven">
+		</a>
+
+				<button class="button_form_none header__button-leng header__button-lang--hover footer__lang_media_desktop"
+					type="button">
+					RU
+
+					<nav class="header-nav__menu">
+						<ul class="menu header-nav header-nav_size_smal header-nav_size--lang">
+							<li class="header-nav__item-button">
+								<a class="button header-lang__link-button" href="">
+									English
+								</a>
+							</li>
+
+							<li class="header-nav__item-button">
+								<a class="button header-lang__link-button" href="">
+									Polski
+								</a>
+							</li>
+
+							<li class="header-nav__item-button">
+								<a class="button  header-lang__link-button" href="">
+									繁體中文
+								</a>
+							</li>
+
+							<li class="header-nav__item-button">
+								<a class="button  header-lang__link-button" href="">
+									العربية
+								</a>
+							</li>
+
+							<li class="header-nav__item-button">
+								<a class="button  header-lang__link-button" href="">
+									Русский
+								</a>
+							</li>
+
+							<li class="header-nav__item-button">
+								<a class="button  header-lang__link-button" href="">
+									Türkçe
+								</a>
+							</li>
+
+							<li class="header-nav__item-button">
+								<a class="button  header-lang__link-button" href="">
+									Português
+								</a>
+							</li>
+
+							<li class="header-nav__item-button">
+								<a class="button header-lang__link-button" href="">
+									Svenska
+								</a>
+							</li>
+
+							<li class="header-nav__item-button">
+								<a class="button header-lang__link-button" href="">
+									Bahasa Indonesia
+								</a>
+							</li>
+
+							<li class="header-nav__item-button">
+								<a class="button header-lang__link-button" href="">
+									日本語
+								</a>
+							</li>
+
+							<li class="header-nav__item-button">
+								<a class="button header-lang__link-button" href="">
+									Filipino
+								</a>
+							</li>
+
+							<li class="header-nav__item-button ">
+								<a class="button header-lang__link-button" href="">
+									Українська мова
+								</a>
+							</li>
+
+							<li class="header-nav__item-button ">
+								<a class="button header-lang__link-button" href="">
+									Čeština
+								</a>
+							</li>
+							<li class="header-nav__item-button ">
+								<a class="button header-lang__link-button" href="">
+									Български
+								</a>
+							</li>
+							<li class="header-nav__item-button ">
+								<a class="button header-lang__link-button" href="">
+									اردو
+								</a>
+							</li>
+							<li class="header-nav__item-button ">
+								<a class="button header-lang__link-button" href="">
+									latviešu valoda
+								</a>
+							</li>
+
+						</ul>
+					</nav>
+				</button>
 
 			<p class="text footer__text_media_desktop">
 				Copyright © 2022 Bithoven.com.
@@ -936,17 +1232,52 @@
 			<img class="footer__img" src="assets/images/footer/googleplay.png" alt="googleplay">
 		</div>
 
-		<div class="footer__social">
-			<div class="footer__icon footer__icon_net_telegramm"> </div>
+	<ul class="menu footer__social">
+		<li class="footer__icon footer__icon_net_telegramm">
+			<a class="footer__social-link" href="">
+				<span class="visually-hidden">telegramm</span>
+				<svg class="social__icon" width="39" height="39" aria-hidden="true" focusable="false">
+					<use href="assets/images/svg/sprite.svg#telegramm"></use>
+				</svg>
+			</a>
+		</li>
 
-			<div class="footer__icon footer__icon_net_youtube"> </div>
+		<li class="footer__icon footer__icon_net_youtube">
+			<a class="footer__social-link" href="">
+				<span class="visually-hidden">youtube</span>
+				<svg class="social__icon" width="39" height="39" aria-hidden="true" focusable="false">
+					<use href="assets/images/svg/sprite.svg#youtube"></use>
+				</svg>
+			</a>
+		</li>
 
-			<div class="footer__icon footer__icon_net_inst"> </div>
+		<li class="footer__icon footer__icon_net_inst">
+			<a class="footer__social-link" href="">
+				<span class="visually-hidden">instagram</span>
+				<svg class="social__icon" width="39" height="39" aria-hidden="true" focusable="false">
+					<use href="assets/images/svg/sprite.svg#inst"></use>
+				</svg>
+			</a>
+		</li>
 
-			<div class="footer__icon footer__icon_net_facebook"> </div>
+		<li class="footer__icon footer__icon_net_facebook">
+			<a class="footer__social-link" href="">
+				<span class="visually-hidden">facebook</span>
+				<svg class="social__icon" width="39" height="39" aria-hidden="true" focusable="false">
+					<use href="assets/images/svg/sprite.svg#facebook"></use>
+				</svg>
+			</a>
+		</li>
 
-			<div class="footer__icon footer__icon_net_discord"> </div>
-		</div>
+		<li class="footer__icon footer__icon_net_discord">
+			<a class="footer__social-link" href="">
+				<span class="visually-hidden">discord</span>
+				<svg class="social__icon" width="39" height="39" aria-hidden="true" focusable="false">
+					<use href="assets/images/svg/sprite.svg#discord"></use>
+				</svg>
+			</a>
+		</li>
+	</ul>
 
 		<p class="text footer__text_size_smal">
 			Copyright © 2022 Bithoven.com.
